fix scrollbar padding

--- a/web_app/ezShop/src/index.css
+++ b/web_app/ezShop/src/index.css
@@ -2,9 +2,14 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
+  scrollbar-width: none;
 }
 
 body{
   background-color: rgb(231, 231, 231);
   overflow: hidden;
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Для Chrome, Safari и других WebKit браузеров */
 }
